--- a/Style.css
+++ b/Style.css
@@ -79,3 +79,61 @@ nav .profile .img-box img{
 
 }
 
+
+nav .menu{
+    position: absolute;
+    background-color: #fff;
+    width: 200px;
+    min-height: 150px;
+    right: 0;
+    top: calc(100% + 30px);
+    box-shadow: 0 50px 50px rgba(0, 0, 0, 0.1);
+    display: none;
+    transition: 0.5s;
+
+}
+
+
+nav .menu.active{
+    display: block;
+}
+
+
+nav .menu::after{
+    content: "";
+    position: absolute;
+    right: 35px;
+    top: -8px;
+    background-color: #fff;
+    width: 20px;
+    min-height: 20px;
+    transform: rotate(45deg);
+    box-shadow: 0 50px 50px rgba(0, 0, 0, 0.1);
+}
+
+
+.menu ul{
+
+}
+
+.menu ul li{
+    list-style: none;
+    padding: 15px 20px;
+    cursor: pointer;
+    font-size: 1.1em;
+}
+
+.menu ul li:hover{
+    background-color: #f5f5f5;
+}
+
+.menu ul li a{
+    text-decoration: none;
+    color: #666;
+    display: flex;
+
+}
+.menu-icons{
+    color: #666;
+    font-size: 0.99em;
+}
