style: Improve drop down layout and spacing

--- a/Style.css
+++ b/Style.css
@@ -111,11 +111,6 @@ nav .menu::after{
     box-shadow: 0 50px 50px rgba(0, 0, 0, 0.1);
 }
 
-
-.menu ul{
-
-}
-
 .menu ul li{
     list-style: none;
     padding: 15px 20px;
@@ -131,7 +126,8 @@ nav .menu::after{
     text-decoration: none;
     color: #666;
     display: flex;
-
+    align-items: center;
+    gap: 10px;
 }
 .menu-icons{
     color: #666;
